<resources>
    <string name="app_name">dodolan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="fullname">Full name</string>
    <string name="search_car_name">Search for car name</string>
    <string name="example_car_name">Tesla model 3 standard</string>
    <string name="example_price">12.500.000</string>
</resources>