<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.user.auth.RegisterFragment">

    <FrameLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_medium"
                android:textSize="50sp" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:textSize="18sp"
        android:textColor="@color/text_primary_color"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find your dream car here!"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:textSize="12sp"
        android:textColor="@color/text_primary_color"
        android:layout_gravity="center_horizontal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="0dp"
        app:cardCornerRadius="4dp"
        android:background="@drawable/shadow"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/ed_fullname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/fullname"
            android:inputType="text"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/ed_rounded_corner"
            android:padding="16dp"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/hint_color"
            android:drawablePadding="20dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="0dp"
        app:cardCornerRadius="4dp"
        android:background="@drawable/shadow"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/ed_rounded_corner"
            android:padding="16dp"
            android:drawableStart="@drawable/ic_account_circle"
            android:drawableTint="@color/hint_color"
            android:drawablePadding="20dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="0dp"
        app:cardCornerRadius="4dp"
        android:background="@drawable/shadow"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/ed_rounded_corner"
            android:padding="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="@color/hint_color"
            android:drawablePadding="20dp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        app:cornerRadius="6dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:textColor="@color/text_primary_color"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:layout_marginLeft="4dp"
            android:textColor="@color/primary_color" />


    </LinearLayout>


</LinearLayout>